YYYY-MM-DD
2022-04-03  begin
2022-04-11  release 0.0.1
2022-04-21  release 0.0.2
2022-04-23  release 0.0.3
2022-04-24  chomik becomes a library
2022-04-25  release 0.0.4 (with sdl_chomik)
2022-10-11  release 0.0.6 (with http_chomik)