@@ -111,5 +111,6 @@ AC_CONFIG_FILES([Makefile
                  src/Makefile
                  src2/Makefile
                  src3/Makefile
+                 src4/Makefile
                  tests/Makefile libchomik.pc libhttpchomik.pc])
 AC_OUTPUT
