@@ -6,3 +6,4 @@ YYYY-MM-DD
 2022-04-24  chomik becomes a library
 2022-04-25  release 0.0.4 (with sdl_chomik)
 2022-10-11  release 0.0.6 (with http_chomik)
+2022-10-14  adding fancy_http_chomik
